# CosmogenicRadionuclidesEvaluation

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  RadionuclidesProduction.cc
analysis/: Al26_Activity.ipynb  Al26_Activity.m  Al26_Shielding_M660.txt  Al26_Shielding_M660_alpha.txt  Shielding_Knyahinya_M600.root  radioactivity_analysis.ipynb
buildmt/: CMakeCache.txt  Makefile  RadionuclidesProduction  cmake_install.cmake  energyOriginal.mac  energy_M223.mac  energy_M229_alpha.mac  energy_M309.mac  energy_M373.mac  energy_M400.mac  energy_M503.mac  particleGun.mac
buildtest/: CMakeCache.txt  Makefile  cmake_install.cmake  debug.mac  energy_M1000.mac  energy_M223_alpha.mac  energy_M300.mac  energy_M373_alpha.mac  energy_M500.mac  energy_M503_alpha.mac  energy_M600.mac  energy_M700.mac  energy_M800.mac  particleGun.mac  particleGun_alpha.mac
energy_spectrum/: GCR_energyMacro.ipynb  GCR_energyMacro_Castagnoli.m  GCR_energyMacro_alpha.m  GCR_energyMacro_proton.m
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  ElectromagneticPhysics.hh  EventAction.hh  GammaNuclearPhysics.hh  HadronElasticPhysicsHP.hh  HistoManager.hh  NeutronHPMessenger.hh  PrimaryGeneratorAction.hh  README.md  Run.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh
macro/: README.md  energy_M100.mac  energy_M200.mac  energy_M229.mac  energy_M309_alpha.mac  energy_M660.mac  energy_M660_alpha.mac  energy_M900.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  ElectromagneticPhysics.cc  EventAction.cc  GammaNuclearPhysics.cc  HadronElasticPhysicsHP.cc  HistoManager.cc  NeutronHPMessenger.cc  PrimaryGeneratorAction.cc  README.md  Run.cc  RunAction.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc
